# go-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REQUESTS.md  main.py  pyproject.toml  requirements.txt  telegram.py
alembic/: env.py
src/: agents.py  ai.py  logger.py  manager.py  models.py  tools.py
src/agents/: base_agent.py  docs.md  heuristic_agent.py  mcts_agent.py
src/config/: agents.yaml  tools.yaml
src/database/: crud.py  models.py  session.py
src/engine/: board.py  game.py  render.py
src/examples/: play_ai_va_ai.py  play_human_vs_ai.py
src/go/: board.py  exceptions.py  game.py  render.py
src/go/agents/: nn_agent.py  random_agent.py
